# Pong

./: .gitignore  CMakeLists.txt  buildshader.sh  premake5.lua
.cache/clangd/index/: main.cpp.2E1EF8E1ECC659DF.idx  vulkanapp.hpp.7EE03D9E101FDC63.idx
.devcontainer/: Dockerfile  devcontainer.json  insalldependencies.sh  installpremake.sh
models/: viking_room.glb  viking_room.gltf
src/: CMakeLists.txt  GameManager.cpp  GameManager.hpp  drawableObject.cpp  drawableObject.hpp  gameObject.hpp  main.cpp  vertex.hpp  vulkanApplication.cpp  vulkanApplication.hpp  vulkanapp.cpp  vulkanapp.hpp
src/shader/: shader.vert
src/shaders/: shader.slang
